# Multi-Agent-Enterprise-AI-Assistant

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: graph.py  state.py  supervisor.py  worker_agents.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py
backend/app/db/: database.py  session.py  vectorstore.py
backend/app/models/: database.py
backend/app/prompts/: agent_prompts.py
backend/app/rag/: citation.py  embeddings.py  loaders.py  memory.py  retriever.py  splitter.py  vectorstore.py
backend/app/schemas/: agent.py  chat.py  health.py  rag.py
backend/app/services/: db_service.py  llm_service.py  rag_service.py  vector_service.py
backend/app/tools/: __init__.py  analytics_tools.py  calculator_tool.py  coding_tools.py  csv_analysis_tool.py  document_search_tool.py  document_tools.py  email_tool.py  email_tools.py  employee_search_tool.py  finance_tools.py  hr_tools.py  it_tools.py  knowledge_search_tool.py  memory_tools.py  project_search_tool.py  python_tool.py  rag_tools.py  report_tools.py  research_tools.py  sql_tool.py  sql_tools.py  weather_tool.py
backend/app/utils/: logger.py
backend/data/: generate_enterprise_data.py  ingest_enterprise_rag.py  seed_data.py
backend/data/documents/architecture_docs/: doc_100.md  doc_101.md  doc_102.md  doc_103.md  doc_104.md  doc_105.md  doc_106.md  doc_107.md  (+17 more)
backend/data/sql/: enterprise_schema.sql
backend/data/structured/: employees.csv  employees.json  projects.csv  projects.json
(+237 files in other folders)
