[project]
name = "multi-agent-enterprise-assistant-backend"
version = "1.0.0"
description = "Enterprise Multi-Agent AI Assistant powered by FastAPI, LangGraph, ChromaDB, and SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "langgraph>=0.0.30",
    "langchain>=0.1.10",
    "langchain-core>=0.1.30",
    "langchain-community>=0.0.25",
    "langchain-openai>=0.0.8",
    "langchain-google-genai>=1.0.0",
    "chromadb>=0.4.24",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
